--- a/practice Project/NetflixCloneProject/style/styling.css
+++ b/practice Project/NetflixCloneProject/style/styling.css
@@ -38,6 +38,7 @@
 .footer{
     background-color: #222;
     height: 450px;
+    padding-top: 7.5px;
 }
 .header{
     background-image: url("./netflixHeader-03-01.jpeg");
@@ -238,16 +239,17 @@ pre{
     font-size: 20px;
 }
 .footer-body{
-    height: 450px;
-    background-color: orange;
-    margin-top: 7.5px;
+    height: 100%;
+    background-color: black;
+    /* margin-top: 10px; */
+    /* padding-top: 7.5px; */
 }
 .footer-line{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 16px;
     height: 40px;
     width: 300px;
-    background-color: yellow;
+    background-color: black;
     color: rgba(255, 255, 255, 0.7);
     padding-top: 65px;
     /* padding: 65px; */
@@ -257,7 +259,7 @@ pre{
 .footer-box{
     height: 300px;
     width: 350px;
-    background-color:navy;
+    background-color:black;
     margin: 10px;
 }
 ol{
