--- a/Team Project/Gaming-Adda-Website/Saurav/style.css
+++ b/Team Project/Gaming-Adda-Website/Saurav/style.css
@@ -2,8 +2,12 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background-color: rgb(149, 173, 99);
+}
 #game{
-    height: 500px;
+    /* height: 500px; */
+    height: 600px;
     width: 390px;
     border: 1px solid black;
     margin: 1rem auto;
@@ -30,7 +34,7 @@
         top: 0px;
     }
     100%{
-        top: 501px;
+        top: 601px;
     }
     
 }
@@ -39,7 +43,8 @@
     width: 130px;
     /* background-color: red; */
     position: relative;
-    top: 250px;
+    /* top: 250px; */
+    top: 400px;
     left: 130px;
     text-align: center;
 }
